--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="container text-center">
             <h2 class="mb-4">Register Your School For Free Online Coding Webinar And<br><br>Prepare Your Kids For
                 Computer Olympiad!</h2>
-            <a class="btn btn-light btn-xl sr-button" data-bss-hover-animate="shake" href="#" data-toggle="modal"
+            <a class="btn btn-light btn-xl sr-button" data-bss-hover-animate="shake" data-toggle="modal"
                 data-target="#register-modal">REGISTER&nbsp;Now!</a>
         </div>
     </section>
