--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
@@ -176,8 +177,8 @@
         <div class="container text-center">
             <h2 class="mb-4">Register Your School For Free Online Coding Webinar And<br><br>Prepare Your Kids For
                 Computer Olympiad!</h2>
-            <a class="btn btn-light btn-xl sr-button" data-bss-hover-animate="shake" data-toggle="modal"
-                data-target="#register-modal">REGISTER&nbsp;Now!</a>
+            <button class="btn btn-light btn-xl sr-button" data-bss-hover-animate="shake" href="#"
+                data-bs-toggle="modal" data-bs-target="#register-modal">REGISTER&nbsp;Now!</button>
         </div>
     </section>
     <section id="contact">
@@ -217,7 +218,7 @@
                 </div>
 
                 <div class="modal-body">
-                    <form id="register-form" class="form" role="form" method="post" action="#">
+                    <form id="register-form" class="form" role="form" method="post">
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">
@@ -257,6 +258,16 @@
                                 minlength="6" required>
                         </div>
 
+                        <div class="input-group form-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fas fa-lock"></i>
+                                </span>
+                            </div>
+                            <input type="password" class="form-control" name="confirm_password"
+                                placeholder="Confirm Password" minlength="6" required>
+                        </div>
+
                         <div class="form-group">
                             <span>I'm a</span>
                             <input type="radio" class="ml-3" id="gender-male" name="gender" value="male" />
@@ -270,7 +281,8 @@
                         </div>
 
                         <div class="form-group">
-                            <button type="submit" class="btn btn-block btn-primary">Create Account</button>
+                            <button type="submit" class="btn btn-block btn-primary"
+                                style="border-radius:5px;">Register</button>
                         </div>
                     </form>
                 </div>
