--- a/index.html
+++ b/index.html
@@ -247,27 +247,27 @@
                             </div>
                             <input type="email" class="form-control" name="email" placeholder="Email" required>
                         </div>
-
-                        <div class="input-group form-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">
-                                    <i class="fas fa-lock"></i>
-                                </span>
+                        <div class="row">
+                            <div class="input-group form-group" style="width: 50%;">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">
+                                        <i class="fas fa-lock"></i>
+                                    </span>
+                                </div>
+                                <input type="password" class="form-control" name="password" placeholder="Password"
+                                    minlength="6" required>
                             </div>
-                            <input type="password" class="form-control" name="password" placeholder="Password"
-                                minlength="6" required>
-                        </div>
 
-                        <div class="input-group form-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">
-                                    <i class="fas fa-lock"></i>
-                                </span>
+                            <div class="col-4 input-group form-group" style="width: 50%;">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">
+                                        <i class="fas fa-lock"></i>
+                                    </span>
+                                </div>
+                                <input type="password" class="form-control" name="confirm_password"
+                                    placeholder="Confirm Password" minlength="6" required>
                             </div>
-                            <input type="password" class="form-control" name="confirm_password"
-                                placeholder="Confirm Password" minlength="6" required>
                         </div>
-
                         <div class="form-group">
                             <span>I'm a</span>
                             <input type="radio" class="ml-3" id="gender-male" name="gender" value="male" />
@@ -287,11 +287,11 @@
                     </form>
                 </div>
 
-                <div class="modal-footer">
+                <!-- <div class="modal-footer">
                     <span>Already have an account?
                         <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#login-modal">Login</a>
                     </span>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
