--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                     <i class="fas fa-phone-alt"></i>
                                 </span>
                             </div>
-                            <input type="text" class="form-control" name="phone" placeholder="Phone Number"
+                            <input type="number" class="form-control" name="phone" placeholder="Phone Number"
                                 maxlength="10" minlength="10" required>
                         </div>
 
