--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                     <li class="nav-item"><a class="nav-link" href="#services">Programs</a></li>
                     <li class="nav-item"><a class="nav-link" href="#portfolio">Events</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">about</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal"
+                            data-bs-target="#login-modal">Login</a></li>
                 </ul>
             </div>
         </div>
@@ -287,16 +289,72 @@
                     </form>
                 </div>
 
-                <!-- <div class="modal-footer">
-                    <span>Already have an account?
-                        <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#login-modal">Login</a>
+                <div class="modal-footer">
+                    <span>Already Joined!
+                        <a href="#" data-dismiss="modal" data-bs-toggle="modal" data-bs-target="#login-modal">Login
+                            Now!</a>
                     </span>
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
 
     <!-- register form end -->
+
+    <!-- login modal start -->
+
+    <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="login-heading"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="login-heading">Login</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body">
+                    <form id="login-form" class="form" role="form" method="post">
+                        <!-- <form id="login-form" class="form" role="form" method="post" action="api/login_submit.php"> -->
+                        <div class="input-group form-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fas fa-user"></i>
+                                </span>
+                            </div>
+                            <input type="email" class="form-control" name="email" placeholder="Email" required>
+                        </div>
+
+                        <div class="input-group form-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fas fa-lock"></i>
+                                </span>
+                            </div>
+                            <input type="password" class="form-control" name="password" placeholder="Password"
+                                minlength="6" required>
+                        </div>
+
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-block btn-primary"
+                                style="border-radius:5px;">Login</button>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <span>
+                        <a href="#" data-dismiss="modal" data-bs-toggle="modal" data-bs-target="#register-modal">Click
+                            here</a>
+                        to register a new account
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- login modal end -->
 
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
