--- a/joinus.html
+++ b/joinus.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>suvidha08</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic&amp;display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
@@ -23,16 +25,20 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top visible" id="mainNav">
-        <div class="container-fluid"><img id="logo" src="assets/img/Logo.png"><a class="navbar-brand brandname" href="#page-top">Suvidha FOUNDATION</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top visible" id="mainNav"
+        style="background: rgb(0 0 0 / 35%);">
+        <div class="container-fluid"><img id="logo" src="assets/img/Logo.png"><a class="navbar-brand brandname"
+                href="index.html">Suvidha FOUNDATION</a><button data-bs-toggle="collapse"
+                data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i
+                    class="fa fa-align-justify"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="donate.html">Donate</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Programs</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">Events</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#programs">Programs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#programs">Events</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-                    <li class="nav-item"><button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#login">&nbsp;login</button></li>
                 </ul>
             </div>
         </div>
@@ -41,13 +47,23 @@
         <h2 class="text-center text-light section-heading">Join Us</h2>
         <hr class="my-4">
         <form class="text-light" id="joinus-form">
-            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Name</span><input class="form-control flex-grow-1 form-inp" type="text" id="fullname" name="name" placeholder="Name"></div>
-            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Email</span><input class="form-control form-inp" type="email" id="email" name="email" placeholder="Email"></div>
-            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Phone Number</span><input class="form-control form-inp" type="number" id="phnum" name="phonenumber" placeholder="Phone Number"></div>
-            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Qualification</span><input class="form-control flex-grow-1 form-inp" type="text" id="qual-1" name="qualification" placeholder="Qualification"></div>
-            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Date Of Birth</span><input class="form-control form-inp" id="dob" type="date" name="dob"></div>
-            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Resume</span><input class="form-control form-inp" type="url" id="resumeurl" name="resume" placeholder="URL"></div>
-            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Choose Your Role</span><select class="form-select form-inp" id="role" name="role" required="">
+            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Name</span><input
+                    class="form-control flex-grow-1 form-inp" type="text" id="fullname" name="name" placeholder="Name">
+            </div>
+            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Email</span><input
+                    class="form-control form-inp" type="email" id="email" name="email" placeholder="Email"></div>
+            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Phone
+                    Number</span><input class="form-control form-inp" type="number" id="phnum" name="phonenumber"
+                    placeholder="Phone Number"></div>
+            <div class="d-flex align-items-center form-contents"><span
+                    class="text-light form-text">Qualification</span><input class="form-control flex-grow-1 form-inp"
+                    type="text" id="qual-1" name="qualification" placeholder="Qualification"></div>
+            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Date Of
+                    Birth</span><input class="form-control form-inp" id="dob" type="date" name="dob"></div>
+            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Resume</span><input
+                    class="form-control form-inp" type="url" id="resumeurl" name="resume" placeholder="URL"></div>
+            <div class="d-flex align-items-center form-contents"><span class="text-light form-text">Choose Your
+                    Role</span><select class="form-select form-inp" id="role" name="role" required="">
                     <option value="">Choose One</option>
                     <option value="Social Media Marketing">Social Media Marketing</option>
                     <option value="Sales &amp; Marketing">Sales &amp; Marketing</option>
@@ -78,7 +94,9 @@
                     <option value="Trainer">Trainer</option>
                     <option value="Others">Others</option>
                 </select></div>
-            <div><button class="btn btn-primary join-btn" data-bss-hover-animate="pulse" type="button">Submit</button><a class="btn btn-primary join-btn" role="button" data-bss-hover-animate="pulse" href="index.html">Home page</a></div>
+            <div><button class="btn btn-primary join-btn" data-bss-hover-animate="pulse" type="button">Submit</button><a
+                    class="btn btn-primary join-btn" role="button" data-bss-hover-animate="pulse" href="index.html">Home
+                    page</a></div>
         </form>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
