--- a/testimonials.html
+++ b/testimonials.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>suvidha08</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic&amp;display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
@@ -20,30 +21,100 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/OwlCarousel-2.css">
     <link rel="stylesheet" href="assets/css/testimonial-page.css">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testimonial</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./testimonial.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/form.css">
+    <style>
+        #mainNav {
+            background-color: #a39685;
+        }
+    </style>
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top visible" id="mainNav">
-        <div class="container-fluid"><img id="logo" src="assets/img/Logo.png"><a class="navbar-brand brandname" href="#page-top">Suvidha FOUNDATION</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+        <div class="container-fluid"><img id="logo" src="assets/img/Logo.png"><a class="navbar-brand brandname"
+                href="index.html">Suvidha FOUNDATION</a><button data-bs-toggle="collapse"
+                data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i
+                    class="fa fa-align-justify"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="donate.html">Donate</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Programs</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">Events</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#programs">Programs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#programs">Events</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-                    <li class="nav-item"><button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#login">&nbsp;login</button></li>
+                    <li class="nav-item"><button class="btn btn-primary" type="button" data-bs-toggle="modal"
+                            data-bs-target="#login-modal">&nbsp;login</button></li>
                 </ul>
             </div>
         </div>
-    </nav><section class="testimonials">
+    </nav>
+
+    <!-- login modal start -->
+
+    <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="login-heading"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="login-heading">Login</h5>
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body">
+                    <form id="login-form" class="form" role="form" method="post">
+                        <!-- action="api/login_submit.php"> -->
+                        <div class="input-group form-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fas fa-user"></i>
+                                </span>
+                            </div>
+                            <input type="email" class="form-control" name="email" placeholder="Email" required>
+                        </div>
+
+                        <div class="input-group form-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fas fa-lock"></i>
+                                </span>
+                            </div>
+                            <input type="password" class="form-control" name="password" placeholder="Password"
+                                minlength="6" required>
+                        </div>
+
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-block btn-primary"
+                                style="border-radius:5px;">Login</button>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <span>
+                        <a href="joinus.html">Click here</a>
+                        to Join US!
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- login modal end -->
+
+    <section class="testimonials">
         <div class="container">
             <h1>Testimonials</h1>
             <p id="testimonial-p" class="text-center">This is why we do, what we do.</p>
@@ -52,63 +123,74 @@
                     <div class="profile">
                         <img class="user left-img" src="assets/img/./testimonials/MuskanYadav.jpg" alt="person one">
                         <blockquote class="quotes">
-                            I am truly greatful to be part of Suvidha Foundation. From the very first day of internship 
-                            I have enjoyed my journey to the fullest and quite sure that further It will be more exciting. 
-                            This foundation really helped me to improve my skills and knowledge.  I had the opportunity to learn
-                            team work , talking to new people and different activities under Human Resource. The team leader and 
-                            the entire team has been very supportive throughout. 
+                            I am truly greatful to be part of Suvidha Foundation. From the very first day of internship
+                            I have enjoyed my journey to the fullest and quite sure that further It will be more
+                            exciting.
+                            This foundation really helped me to improve my skills and knowledge. I had the opportunity
+                            to learn
+                            team work , talking to new people and different activities under Human Resource. The team
+                            leader and
+                            the entire team has been very supportive throughout.
                         </blockquote>
                         <h3>Muskan Yadav<br> <span class="test-profession">HR</span></h3>
                     </div>
-                </div>               
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="profile">
-                        <img class="user right-img" src="assets/img/./testimonials/AlakanandaBorthakur.jpg" alt="person two">
+                        <img class="user right-img" src="assets/img/./testimonials/AlakanandaBorthakur.jpg"
+                            alt="person two">
                         <blockquote class="quotes">
                             It has been a great honour to be a part of Suvidha Foundation. Suvidha Foundation
-                             has a very good staff and management. The best part is the amiable team. We have 
-                             a small team but since all the team members are very cooperative, so it is fun 
-                             working here. The most important part of this NGO is the environment in which we get 
-                             to learn such a variety of things and also being very friendly is its forte.  Moreover, 
-                             here we perform certain events like games, webinars, fundraising activities for the 
-                             underpriviledged, events apart from the daily tasks. This brings in unity and a sense of 
-                             responsibility amongt us. So, I feel this NGO is one of the best which serves the society immensely. 
-                            #suvidhafoundationisthebest.  
+                            has a very good staff and management. The best part is the amiable team. We have
+                            a small team but since all the team members are very cooperative, so it is fun
+                            working here. The most important part of this NGO is the environment in which we get
+                            to learn such a variety of things and also being very friendly is its forte. Moreover,
+                            here we perform certain events like games, webinars, fundraising activities for the
+                            underpriviledged, events apart from the daily tasks. This brings in unity and a sense of
+                            responsibility amongt us. So, I feel this NGO is one of the best which serves the society
+                            immensely.
+                            #suvidhafoundationisthebest.
                         </blockquote>
                         <h3>Alakananda Borthakur<br> <span class="test-profession">HR</span></h3>
                     </div>
-                </div>               
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="profile">
                         <img class="user left-img" src="assets/img/./testimonials/PrernaSingh.jpg" alt="person one">
                         <blockquote class="quotes">
-                            Suvidha foundation is working for such a great motive i.e to educate children of weaker section 
-                            by giving them guidance and free education. I always wanted to be a part of such an organization. 
-                            I feel blessed to work here. Thank you suvidha foundation for letting me be a part of such a 
+                            Suvidha foundation is working for such a great motive i.e to educate children of weaker
+                            section
+                            by giving them guidance and free education. I always wanted to be a part of such an
+                            organization.
+                            I feel blessed to work here. Thank you suvidha foundation for letting me be a part of such a
                             great organization.
                         </blockquote>
                         <h3>Prerna Singh<br> <span class="test-profession">HR</span></h3>
                     </div>
-                </div>               
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="profile">
                         <img class="user right-img" src="assets/img/./testimonials/imgtemp.jpeg" alt="person one">
                         <blockquote class="quotes">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed elit et tellus elementum 
-                            lobortis a a sapien. Cras ut justo eleifend, ornare dui sodales, cursus nulla. Nullam sit amet                            
-                            diam fringilla, sagittis sapien vel, ullamcorper mi. Suspendisse dapibus dui arcu, et euismod 
-                            turpis viverra at. Morbi vulputate, diam nec hendrerit volutpat, purus ipsum egestas arcu, ut 
-                            rhoncus lectus orci commodo risus. Mauris sit amet nibh in leo volutpat malesuada vel sed sem.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed elit et tellus elementum
+                            lobortis a a sapien. Cras ut justo eleifend, ornare dui sodales, cursus nulla. Nullam sit
+                            amet
+                            diam fringilla, sagittis sapien vel, ullamcorper mi. Suspendisse dapibus dui arcu, et
+                            euismod
+                            turpis viverra at. Morbi vulputate, diam nec hendrerit volutpat, purus ipsum egestas arcu,
+                            ut
+                            rhoncus lectus orci commodo risus. Mauris sit amet nibh in leo volutpat malesuada vel sed
+                            sem.
                         </blockquote>
                         <h3>Lorem Ipsum<br> <span class="test-profession">HR</span></h3>
                     </div>
-                </div>               
+                </div>
             </div>
         </div>
     </section>
